--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.14.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.37",
-    "express": "^4.18.1",
+    "express": "^4.18.1"   
+  },
+  "devDependencies": {
+    "prisma": "^3.14.0",
     "ts-node": "^10.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
